--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html {
+  touch-action: manipulation;
+}
 .choice {
   display: flex;
   justify-content: center;
@@ -6,10 +9,11 @@
   width: 60%;
   padding: 20px 0;
   text-align: center;
+  font-size: 13px;
 }
 .choiceBtn {
   position: relative;
-  width: 20%;
+  width: 40%;
   padding: 20px 0;
   background-color: #ffd700;
   color: #ff0000;
@@ -27,7 +31,7 @@
   width: 100%;
   height: 100%;
   background-color: #000;
-  opacity: 0.3;
+  opacity: 0.5;
   cursor: not-allowed;
 }
 .choiceOut {
@@ -172,8 +176,8 @@
   margin: 30px 5%;
   padding: 30px;
   font-size: 24px;
-  background-color: #222;
-  color: #fff;
+  background-color: #fffacd;
+  color: #222;
 }
 .drawOut {
   width: 50%;
@@ -188,7 +192,7 @@
 }
 .fix {
   position: fixed;
-  top: 50px;
+  top: 300px;
   right: 0;
   z-index: 2;
 }
